# gate

./: CMakeLists.txt  README.md  frame-seattle-topo.tk  frame-template.tk  main.c  topo-frame-template.tk  topo.c  topo.h
.patch/: Assign-ITRF93-and-Earth-body-fixed-frame.patch
cli/: CMakeLists.txt  clihandler.c  clihandler.h  commands.c  commands.h  dispatcher.c  main.c  util.c  util.h
cmake/: DownloadCspice.cmake  Doxygen.cmake  ExportLibrary.cmake  Findgatesnm.cmake
doc/: Doxyfile.in
gate/: CMakeLists.txt  Doxygen.cmake
gate/gate/: constants.h  stars.c  stars.h  timeconv.c  timeconv.h  topo.c  topo.h
gatecli/: CMakeLists.txt  clihandler.h  commands.c  commands.h  dispatcher.h  main.c  options.c  options.h  table.c  table.h  util.c  util.h
gatesnm/: CMakeLists.txt
gatesnm/gatesnm/: snm.c  snm.h
patch/: Fix-compilation-issue-with-SpiceZpr.patch
snm/: CMakeLists.txt  gatesnmConfig.cmake.in  snm.c  snm.h
src/: CMakeLists.txt  constants.h  gateConfig.cmake.in  main.c  stars.c  stars.h  timeconv.c  timeconv.h  topo.c  topo.h
